# attention-from-scratch

./: .gitignore  README.md  benchmark.py  pyproject.toml  visualize.py
attention/: mha.py
tests/: test_mha.py
