[project]
name = "attention-from-scratch"
version = "0.1.0"
description = "Multi-head self-attention implementation from scratch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
strict = ["attention"]
